...
                    android:backgroundTint="#A38ACF"
                    android:clickable="true"
                    android:src="@drawable/baseline_remove_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:layout_marginStart="20dp"
                android:textColor="#A277EC"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cover_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/cover_image" />

            <TextView
                android:id="@+id/game_platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="Game platform"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/platform_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Release date"
                android:layout_marginEnd="20dp"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/esrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="Age rating"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/esrb_rating_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="Developer"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/developer_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="Publisher"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publisher_textview"
                android:layout_width="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="Genre"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="Description"
                android:textColor="#9074C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:text="TextView" />
...
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Save impression" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_impression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
...
