<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Favorites"
        android:id="@+id/favoritesItem"
        android:icon="@drawable/baseline_favorite_24"/>
    <item android:title="Search"
        android:id="@+id/homeItem"
        android:icon="@drawable/baseline_search_24"/>
    <item android:title="Details"
        android:id="@+id/gameDetailsItem"
        android:icon="@drawable/baseline_videogame_asset_24"/>
</menu>