...
                    android:background="@android:drawable/ic_menu_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_query_edittext"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/game_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="20dp"
...
